# supa.cc

./: .gitignore  .security-scan-allowlist  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  install.ps1  install.sh  pyproject.toml
.agents/skills/supa-cc/: SKILL.md
.agents/skills/supa-cc/agents/: openai.yaml
.agents/skills/supa-cc/references/: commands.md  safety-and-errors.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  install_problem.yml
.github/workflows/: ci.yml  homebrew.yml  release.yml
.superpowers/sdd/: native-sync-task-3-report.md
Formula/: supa-cc.rb
docs/: agent-skill.md  architecture.md  installation.md  license-pt-BR.md  release.md  security.md  troubleshooting.md  usage.md
docs/superpowers/plans/: 2026-07-11-linux-support.md  2026-07-11-native-cli-session-sync.md  2026-07-12-homebrew-validation-workflow.md  2026-07-12-v0.3.0-release.md
docs/superpowers/specs/: 2026-07-11-linux-support-design.md  2026-07-11-native-cli-session-sync-design.md  2026-07-12-homebrew-validation-workflow-design.md  2026-07-12-v0.3.0-release-design.md
scripts/: inspect_artifacts.py  runtime_requirements.py  security_scan.py
supa_cc/: __init__.py  __main__.py  account_store.py  accounts.py  auth.py  config.py  credentials.py  diagnostic_collectors.py  diagnostic_renderers.py  diagnostics.py  environment.py  file_lock.py  installation.py  keychain.py  models.py  native_session.py  process.py  state.py  strings.py  supabase_cli.py  transactions.py  tui.py  windows_job.py
supa_cc/accounts/: __init__.py  manager.py  mutations.py  service.py  state.py  store.py  transactions.py
supa_cc/security/: __init__.py  tokens.py
supa_cc/session/: __init__.py  mutations.py  native.py
supa_cc/ui/: __init__.py  animations.py  app.py  console.py  layout.py  navigation.py  render.py  screens.py  state.py  strings.py  theme.py
tests/: conftest.py  helpers.py  test_account_service_v3.py  test_account_state.py  test_accounts.py  test_agent_skill.py  test_artifact_inspection.py  test_auth.py  test_cli_commands.py  test_config.py  test_credentials.py  test_diagnostics.py  test_documentation.py  test_environment.py  test_file_lock.py  test_install_scripts.py  test_installation.py  test_installation_channel.py  test_keychain.py  test_language.py  test_linux_secret_service_smoke.py  test_macos_keychain_smoke.py  test_models.py  test_native_session.py  test_process.py  test_project_identity.py  test_publication_assets.py  test_runtime_requirements.py  test_security_scan.py  test_state.py  test_structured_failures.py  test_supabase_cli.py  test_supabase_cli_integration.py  test_test_isolation.py  test_tui_app.py  test_tui_entrypoint.py  test_tui_simplification.py  test_ui_animations.py  test_ui_console.py  test_ui_frame.py  (+7 more)
