[build-system]
requires = ["hatchling>=1.25,<2"]
build-backend = "hatchling.build"

[project]
name = "supa.cc"
version = "0.5.6"
description = "Local Supabase account switcher for macOS, Linux, and Windows"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = [
    "supabase",
    "cli",
    "macos",
    "linux",
    "windows",
    "keychain",
    "secret-service",
    "credential-manager",
    "account-management",
    "developer-tools",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "questionary>=2.0.0",
    "keyring>=24.0.0",
    "click>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/dgabreuu/supa.cc"
Repository = "https://github.com/dgabreuu/supa.cc.git"
Issues = "https://github.com/dgabreuu/supa.cc/issues"
Documentation = "https://github.com/dgabreuu/supa.cc/blob/main/docs/usage.md"
Changelog = "https://github.com/dgabreuu/supa.cc/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "PyYAML>=6.0",
    "build>=1.2.0",
    "pip-audit>=2.7,<3",
    "setuptools>=83.0.0",
]

[project.scripts]
"supa.cc" = "supa_cc.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["supa_cc"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.superpowers",
    "/docs/superpowers",
    "/.pytest_cache",
    "/.ruff_cache",
    "/**/__pycache__",
    "/**/*.pyc",
    "/**/*.diff",
    "/dist",
    "/build",
    "/.venv",
    "/venv",
    "/.env",
    "/.DS_Store",
    "/tests",
    "/assets",
    "/scripts",
    "/Formula",
]

[tool.pytest.ini_options]
markers = [
    "real_keychain: opt-in smoke test that accesses an isolated macOS Keychain item",
    "real_secret_service: opt-in smoke test that accesses an isolated Linux Secret Service item",
    "real_windows_credential_manager: opt-in smoke test that accesses an isolated Windows Credential Manager item",
]
